src/index.css
@import url("https://fonts.cdnfonts.com/css/pp-neue-montreal");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap");

:root {
  --base-100: #fff;
  --base-200: #f5ebde;
  --base-300: #141414;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  background-color: var(--base-200);
}
h1,
a,
p {
  font-family: "PP Neue Montreal", sans-serif;
  font-weight: 500;
  letter-spacing: -2%;
  line-height: 1;
  text-decoration: none;
}

img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* ─── PRELOADER ─── */
.preloader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  clip-path: polygon(0, 0, 100%, 0, 100%, 100%, 0, 100%);
  background-color: var(--base-300);
  color: var(--base-100);
  will-change: clip-path;
  overflow: hidden;
  z-index: 12;
}

.preloader-images {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.preloader-img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0);
  width: 200px;
  height: 300px;
  transform-origin: center center;
  clip-path: polygon(20% 20%, 80% 20%, 80% 20%, 20% 80%);
  will-change: transform, clip-path;
}

.preload-header {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  mix-blend-mode: difference;
}

.preload-header h1 {
  text-transform: uppercase;
  font-size: clamp(2rem, 12vw, 15rem);
  line-height: 0.85;
  filter: brightness(0) invert(1);
}

.preload-counter {
  position: absolute;
  top: -1.5rem;
  left: calc(100% + 1.5rem);
  overflow: hidden;
}

.preload-counter p {
  color: var(--base-100);
  font-size: clamp(1rem, 1.5vw, 2rem);
  line-height: 0.85;
}

/* ─── NAV ─── */
nav a {
  color: var(--base-300);
  line-height: 1;
}

nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 2rem 3rem;
  margin-top: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 10;
  mix-blend-mode: difference;
  background: transparent;
}

.nav-logo img {
  filter: brightness(0) invert(1);
}

.nav-logo {
  width: 180px;
  height: 90px;
  display: flex;
  align-items: center;
}

.nav-logo img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.nav-links {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  gap: 4.5rem;
}

.nav-links a {
  text-decoration: none;
  font-size: 2.5rem;
}

.nav-links a,
.nav-logo img {
  filter: brightness(0) invert(1);
}

/* ─── MENU ─── */
.menu {
  height: 100vh;
  width: 100%;
  background-color: var(--base-300);

  position: fixed;
  z-index: 999;
  top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 30px;
  font-size: 70px;
  color: black;
  transform: translateY(-300%);
}

.menu a {
  font-family: "Bricolage Grotesque", sans-serif;
  text-align: center;
  text-decoration: none;
  font-size: 5rem;
  color: var(--base-100);
  font-weight: 900;
}

.menu-btn {
  cursor: pointer;
}

.close-btn {
  position: absolute;
  top: 6rem;
  right: 9rem;
  font-size: 40px;
  border: none;
  background-color: var(--base-300);
  color: var(--base-100);
  cursor: pointer;
}

/* ─── HERO ─── */
.hero {
  position: relative;
  width: 100%;
  height: 100vh;
  background-color: var(--base-200);
  color: var(--base-300);
  overflow: hidden;
  transform: translateY(100%);

  will-change: transform;
  z-index: 5;
  padding-bottom: 15vh;
}

.header h1 {
  position: absolute;
  top: 38%;
  left: 50%;
  display: flex;
  justify-content: center;
  transform: translate(-50%, -50%);
  width: 100%;
  height: max-content;
  overflow: hidden;
}

.header h1 {
  text-transform: uppercase;
  font-size: clamp(2.5rem, 30vw, 32rem);
  line-height: 0.85;
}

.line {
  height: 8px;
  background-color: var(--base-300);
  position: absolute;
  top: 63%;
  left: 6%;
  right: 5%;
  transform: scaleX(0);
  transform-origin: left;
}

.hero-footer {
  position: absolute;
  width: 100%;
  bottom: 0;
  padding: 2rem;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.char,
.word,
.preload-counter p {
  transform: translateY(100%);
  will-change: transform;
}

.content {
  position: absolute;
  top: 67%;
  left: 6%;
  right: 5%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.content p {
  font-size: 1.3rem;
  font-weight: 600;
  text-transform: uppercase;
}

.content p:nth-child(1) {
  flex: 3;
}
.content p:nth-child(2) {
  flex: 5;
}
.content p:nth-child(3) {
  flex: 2;
}
.content p:nth-child(4) {
  flex: 1;
  text-align: right;
}

.content1 {
  position: absolute;
  top: 74%;
  left: 30%;
  right: 5%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.content1 p,
.content1 a {
  font-size: 1.1rem;
  font-weight: 600;
  line-height: 1.2;
}

.content1 a {
  width: 37%;
}

/* ─── CURSOR ─── */
.cursor {
  height: 15px;
  width: 15px;
  border-radius: 50%;
  background-color: rgb(252, 41, 41);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 11;
  pointer-events: none;
}

/* ─── PRODUCTS ─── */
.product-wrap {
  position: relative;
  margin-top: -15vh;
  z-index: 6;
  top: 2rem;
  visibility: hidden;
}

.product-container {
  height: 320vh;
  width: 100%;
  background-color: var(--base-200);
  overflow: hidden;
  z-index: 1;
}

.image-container1 {
  width: 100%;
  padding: 0 4rem;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.image {
  height: 550px;
  width: 420px;
  overflow: hidden;
  position: relative;
}

.img-reveal {
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: relative;
}
.img-reveal {
  clip-path: inset(100% 0 0 0);
}
.product-name,
.product-color {
  opacity: 0;
  transform: translateY(24px);
}
.img-reveal img {
  transform: translateY(30%) scale(1.1);
}

.img-hover {
  transform: translateX(-100%);
  filter: brightness(1.5) contrast(1);
  transition: filter 0.6s ease;
}

.img-reveal img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: absolute;
  inset: 0;
  will-change: transform;
}

.img-primary {
  transform: translateX(0%);
}

.product-detail {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
}
.product-detail {
  min-height: 300px; /* important */
}
.product-name {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
}

.product-name p {
  font-size: 1.5rem;
  font-weight: 600;
  font-family: "General Sans", sans-serif;
}

.product-color {
  width: 100%;
  font-weight: 600;
  font-family: "General Sans", sans-serif;
}

/* SECOND ROW CONTAINER */
.product-image2 {
  width: 100%;
  padding: 0 4rem;
  margin-top: 9rem;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: row;
  gap: 2rem;
}

.wrap {
  display: flex;
  justify-content: flex-start;
  gap: 2rem;
  width: 60%;
  align-items: flex-start;
}

.wrap .img1 {
  height: 420px;
  width: 270px;
  overflow: hidden;
  position: relative;
  flex-shrink: 0;
}

.wrap .img2 {
  height: 300px;
  width: 320px;
  overflow: hidden;
  position: relative;
  flex-shrink: 0;
}

.img3 {
  height: 900px;
  width: 850px;
  overflow: hidden;
  position: relative;
}

.product-image2 .product-detail {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: flex-start;
  justify-content: flex-start;
}

.product-image2 .product-name {
  width: 100%;
}

.product-image2 .product-color {
  width: 100%;
}

.last .lastd {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: flex-end;
  justify-content: flex-end;
}

.last {
  display: flex;
  justify-content: flex-end;
  gap: 2rem;
  width: 60%;
  align-items: flex-start;
}

/* ─── FOOTER ─── */
footer {
  height: 100vh;
  width: 100%;
  background-color: var(--base-200);
  margin-top: 7rem;
}

.line1 {
  height: 0.4rem;
  width: 95%;
  background-color: var(--base-300);
  margin-left: 3%;
}

.footer-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 3%;
  margin-right: 3%;
  margin-top: 1rem;
}

.footer-main p,
.copy p {
  font-size: 6.5rem;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  letter-spacing: -4px;
}

.footer-main #hi {
  color: #4b433e;
}

.creation {
  margin-top: 22rem;
  margin-left: 3%;
}

.creation p {
  font-size: 2rem;
}

.h {
  height: 0.1rem;
  margin-top: 1.4rem;
}

.footer-foot {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 3%;
  margin-right: 2%;
  margin-top: 2%;
}

.footer-foot .foot a,
.footer-foot .foot p {
  font-size: 1.4rem;
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
}

.foot {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
  gap: 1rem;
}

